# cwdc_example

./: CMakeLists.txt  ExampleModule.lua  README.md  example_functions.c  init.c  init.lua  run.lua
generic/: ExampleModule.c
